--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ body {
 
 .myForm {
     margin-top: 20vh;
-    width: 30%;
+    width: 250px;
     align-items: center;
     text-align: center;
 }
